# django_documentos

./: .coveragerc  .editorconfig  .gitignore  .landscape.yml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  links_uteis.md  manage.py  requeriments.apt  requirements-test.txt  requirements.apt  requirements.txt  runtests.py  setup.cfg  setup.py  test.notebook  teste_apagar.py  tox.ini
django_documentos/: __init__.py  admin.py  apps.py  autocomplete_light_registry.py  django_documentos_urls.py  forms.py  handlers.py  models.py  samples_html.py  settings.py  temporatio_apagar.py  urls.py  utils.py  views.py  widgets.py
django_documentos/migrations/: 0001_initial.py  0002_auto_20150728_1448.py  0002_auto_20150910_1813.py  0002_auto_20151001_1940.py  0002_auto_20151016_1312.py  0002_auto_20151218_1807.py  0002_documentolock.py  0003_auto_20150728_1740.py  0003_auto_20150914_1354.py  0003_auto_20151029_2057.py  0003_docteste.py  0004_auto_20150728_2041.py  0004_auto_20150914_1356.py  0004_auto_20151029_2100.py  0004_historicaldocteste.py  0005_auto_20150728_2053.py  0005_auto_20150915_1345.py  0005_auto_20151001_2005.py  0006_auto_20150729_1405.py  0006_auto_20150922_1412.py  (+8 more)
docs/: conf.py  django_documentos.rst  index.rst  installation.rst  modules.rst  usage.rst
requirements/: requirements-codestyle.txt  requirements-testing.txt
test_app/: admin.py  models.py  test_app_urls.py  views.py
test_proj/: db.sqlite3  settings.py  urls.py
tests/: __init__.py  conftest.py  test_models.py  test_utils.py  test_views.py  utils.py
(+718 files in other folders)
