[pep8]
max_line_length =  119

[flake8]
exclude = build,.git
# ignore = E123,E128,E402,E501,W503,E731,W601
max-line-length = 119
statistics = true
count = true
show-source = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django_documentos
multi_line_output = 5
not_skip = __init__.py
skip = migrations

[metadata]
license-file = LICENSE

[wheel]
universal = 1
